# qspi-refactoring

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
outputs/: table7_qspi.csv  table8_priority.csv
qspi/: __init__.py  core.py  model.py  paper_data.py
scripts/: reproduce_figures.py  reproduce_tables.py
tests/: test_core.py  test_smoke.py
